--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,19 @@
 :root {
   --main-color-background: #2f303a;
+  --hero-background-image: rgba(47, 48, 58, 0.4);
   --accent-color: #2196f3;
   --btn-active-color: #188ce8;
   --main-color-font: #212121;
   --secondary-color-font: #757575;
+  --grey-icon-color: #afb1b8;
   --white-color: #ffffff;
   --black-color: #000000;
   --grey-background-color: #f5f4fa;
   --grey-stroke-color: #ececec;
   --projects-cards-color: #eeeeee;
+  --grey-bg-icon: rgba(255, 255, 255, 0.1);
   --grey-txt-color-60: rgba(255, 255, 255, 0.6);
+  --background-overlay: rgba(47, 48, 58, 0.4);
   --main-font: "Roboto", sans-serif;
   --logo-font: "Raleway", sans-serif;
   --main-font-size: 14px;
@@ -110,29 +114,63 @@ img {
   color: var(--accent-color);
 }
 
-.contact {
+.list-contact {
   display: flex;
   margin-left: auto;
 }
+.list-contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+.list-contact .list-item {
+  display: flex;
+  min-width: 161px;
+  min-height: 16px;
+}
+
 .link-contact {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
   color: var(--secondary-color-font);
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .link-contact:focus,
 .link-contact:hover {
   color: var(--accent-color);
 }
+.link-contact:hover .header-icon,
+.link-contact:focus .header-icon {
+  fill: currentColor;
+}
+.header-icon {
+  fill: var(--secondary-color-font);
+}
 
 /*  hero-section */
 .hero-section {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--main-color-background);
+  background-image: linear-gradient(
+      var(--background-overlay),
+      var(--background-overlay)
+    ),
+    url(../images/background-img.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .title {
@@ -185,15 +223,25 @@ img {
   padding: 0;
 }
 
-.features .list {
+.features-list {
   display: flex;
   justify-content: center;
 }
-.features .list-item + .list-item {
+.features-item + .features-item {
   margin-left: 30px;
 }
-.features .list-item {
+.features-item {
   flex-basis: calc((100% - 3 * 30px) / 4);
+}
+
+.features-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  background-color: var(--grey-background-color);
+  width: 270px;
+  height: 120px;
 }
 
 .subtitle-feature {
@@ -267,11 +315,73 @@ img {
 
 .job-position {
   margin-top: 10px;
+  margin-bottom: 16px;
   color: var(--secondary-color-font);
   font-size: var(--secondary-font-size);
   line-height: calc(19 / 16);
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--white-color);
+  border-radius: 50%;
+}
+.social-icon {
+  fill: var(--grey-icon-color);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+.social-link:hover .social-icon,
+.social-link:hover .social-icon {
+  fill: var(--white-color);
+}
+
+/* clients */
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.clients-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+.client-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--grey-icon-color);
+  border-radius: 4px;
+}
+.client-link:hover .client-icon,
+.client-link:focus .client-icon {
+  fill: var(--accent-color);
+}
+.client-link:hover,
+.client-link:focus {
+  border: 1px solid var(--accent-color);
+}
+.client-icon {
+  fill: var(--grey-icon-color);
 }
 
 /* footer */
@@ -280,11 +390,14 @@ img {
   padding-bottom: 60px;
   background-color: var(--main-color-background);
 }
-
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
 .logo-footer {
   margin-bottom: 20px;
   margin-right: 0;
-  padding-top: 0;
+  padding: 0;
 }
 
 .logo-wrap-footer {
@@ -316,6 +429,40 @@ img {
   color: var(--accent-color);
 }
 
+.join {
+  margin-left: 70px;
+  padding-top: 12px;
+}
+.text-join {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+.social-list-footer {
+  display: flex;
+  gap: 10px;
+}
+.social-link-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--grey-bg-icon);
+  border-radius: 50%;
+}
+.social-icon-footer {
+  fill: var(--white-color);
+}
+.social-link-footer:hover,
+.social-link-footer:focus {
+  background-color: var(--accent-color);
+}
+
 /* portfolio projects section */
 .projects {
   padding-bottom: var(--padding-in-section);
@@ -340,6 +487,8 @@ img {
 .btn-projects:hover {
   background-color: var(--accent-color);
   color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .list-btn {
@@ -368,6 +517,11 @@ flex-basis: calc((100% - 30px) / 3);} */
 .project-card:not(nth-last-child(-n+3)) {
   margin-bottom: 30px;
 } */
+
+.project-card:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 .project-content {
   padding: 20px 24px;
